@@ -2,6 +2,8 @@
 
 	* libtiff/tif_stream.cxx: warnings cleanup
 	http://bugzilla.maptools.org/show_bug.cgi?id=2091
+	* libtiff/tif_dirread.c: warnings cleanup
+	http://bugzilla.maptools.org/show_bug.cgi?id=2092
 
 2010-12-11  Lee Howard <faxguy@howardsilvan.com>
 
